[gd_scene load_steps=10 format=3 uid="uid://b351515r463cx"]

[ext_resource type="Script" path="res://scripts/force_arrow.gd" id="1_a6rtv"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qtqba"]
albedo_color = Color(0, 0, 0, 1)
emission_enabled = true

[sub_resource type="CylinderMesh" id="CylinderMesh_x2m18"]
material = SubResource("StandardMaterial3D_qtqba")
top_radius = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3s40v"]
albedo_color = Color(0, 0, 1, 1)
emission_enabled = true
emission = Color(0, 0, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_2i0vd"]
material = SubResource("StandardMaterial3D_3s40v")
top_radius = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ka2ya"]
albedo_color = Color(0, 1, 0, 1)
emission_enabled = true
emission = Color(0, 1, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_ry4vh"]
material = SubResource("StandardMaterial3D_ka2ya")
top_radius = 0.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_i805l"]
emission_enabled = true
emission = Color(1, 1, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_12smd"]
material = SubResource("StandardMaterial3D_i805l")
top_radius = 0.0

[node name="Force_arrow" type="Node3D" groups=["force_vector", "particles"]]
script = ExtResource("1_a6rtv")

[node name="G_Force_arrow" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_x2m18")
skeleton = NodePath("../EM_Force_arrow")

[node name="EM_Force_arrow" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_2i0vd")
skeleton = NodePath("../Res_Force_arrow")

[node name="YK_Force_arrow" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_ry4vh")
skeleton = NodePath("../EM_Force_arrow")

[node name="Res_Force_arrow" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_12smd")
